--- a/app/index.html
+++ b/app/index.html
@@ -22,17 +22,14 @@
   </head>
   <body>
     <script>
-      function checkLoginState() {
-        FB.getLoginStatus(function(response) {
-          statusChangeCallback(response);
-        });
-      }
+      var user_id,access_token;
       window.fbAsyncInit = function() {
         FB.init({
           appId      : '889529114437943',
           xfbml      : true,
           version    : 'v2.3'
         });
+        login();
       };
 
       (function(d, s, id){
@@ -42,53 +39,43 @@
          js.src = "//connect.facebook.net/en_US/sdk.js";
          fjs.parentNode.insertBefore(js, fjs);
        }(document, 'script', 'facebook-jssdk'));
+
+      //  function checkLoginState() {
+      //    FB.getLoginStatus(function(response) {
+      //      statusChangeCallback(response);
+      //    });
+      //  }
        // This is called with the results from from FB.getLoginStatus().
-       function statusChangeCallback(response) {
-         console.log('statusChangeCallback');
-         console.log(response);
-         // The response object is returned with a status field that lets the
-         // app know the current login status of the person.
-         // Full docs on the response object can be found in the documentation
-         // for FB.getLoginStatus().
-         if (response.status === 'connected') {
-           // Logged into your app and Facebook.
-           testAPI();
-         } else if (response.status === 'not_authorized') {
-           // The person is logged into Facebook, but not your app.
-           document.getElementById('status').innerHTML = 'Please log ' +
-             'into this app.';
-         } else {
-           // The person is not logged into Facebook, so we're not sure if
-           // they are logged into this app or not.
-           document.getElementById('status').innerHTML = 'Please log ' +
-             'into Facebook.';
-         }
-       }
+      //  function statusChangeCallback(response) {
+      //    console.log('statusChangeCallback');
+      //    console.log(response);
+      //    // The response object is returned with a status field that lets the
+      //    // app know the current login status of the person.
+      //    // Full docs on the response object can be found in the documentation
+      //    // for FB.getLoginStatus().
+      //    if (response.status === 'connected') {
+      //      // Logged into your app and Facebook.
+      //      testAPI();
+      //    } else if (response.status === 'not_authorized') {
+      //      // The person is logged into Facebook, but not your app.
+      //      document.getElementById('status').innerHTML = 'Please log ' +
+      //        'into this app.';
+      //    } else {
+      //      // The person is not logged into Facebook, so we're not sure if
+      //      // they are logged into this app or not.
+      //      document.getElementById('status').innerHTML = 'Please log ' +
+      //        'into Facebook.';
+      //    }
+      //  }
 
-       FB.getLoginStatus(function(response) {
-          statusChangeCallback(response);
-        });
-
-
-        // Load the SDK asynchronously
-        (function(d, s, id) {
-          var js, fjs = d.getElementsByTagName(s)[0];
-          if (d.getElementById(id)) return;
-          js = d.createElement(s); js.id = id;
-          js.src = "//connect.facebook.net/en_US/sdk.js";
-          fjs.parentNode.insertBefore(js, fjs);
-        }(document, 'script', 'facebook-jssdk'));
+      //  FB.getLoginStatus(function(response) {
+      //     statusChangeCallback(response);
+      //   });
 
         // Here we run a very simple test of the Graph API after login is
         // successful.  See statusChangeCallback() for when this call is made.
-        function testAPI() {
-          console.log('Welcome!  Fetching your information.... ');
-          FB.api('/me', function(response) {
-            console.log('Successful login for: ' + response.name);
-            document.getElementById('status').innerHTML =
-              'Thanks for logging in, ' + response.name + '!';
-          });
-        }
+
+
     </script>
     <!--[if lt IE 10]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -128,7 +115,6 @@
       </nav>
     </header>
     <div class="container"  style="margin:50px auto;display:table;">
-      <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
       <div id="status"></div>
       <div id="container" class="js-masonry">
       </div>
@@ -173,6 +159,7 @@
         <script src="bower_components/masonry/dist/masonry.pkgd.min.js"></script>
         <script src="bower_components/imagesloaded/imagesloaded.pkgd.min.js"></script>
 
+        <script src="scripts/underscore.js"></script>
         <!-- endbuild -->
 
         <!-- build:js({app,.tmp}) scripts/main.js -->
