--- a/app/index.html
+++ b/app/index.html
@@ -90,7 +90,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Masonry</a>
+            <a class="navbar-brand" href="#">F8 Image Gallery</a>
           </div>
           <div id="navbar" class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
@@ -110,18 +110,23 @@
                 </ul>
               </li>
             </ul>
+            <ul class="nav navbar-nav pull-right">
+              <li><a href="#me" id="user_name"></a></li>
+              <li><a href="#logout" id="user_logout">logout</a></li>
+            </ul>
           </div><!--/.nav-collapse -->
         </div>
       </nav>
     </header>
     <div class="container"  style="margin:50px auto;display:table;">
-      <div id="status"></div>
+      <div id="status" class="text-center"></div>
       <div id="container" class="js-masonry">
       </div>
+      <div id="pagination"></div>
     </div>
     <footer class="footer">
       <div class="container">
-        <p class="text-center">Masonry &copy; Copyright 2015</p>
+        <p class="text-center">F8 Image Gallery &copy; Copyright 2015 | with <span class="glyphicon glyphicon-heart" style="color:red;"></span> from @Akinza</p>
       </div>
 
     </footer>
