Add: method to pull and render albums

--- a/app/index.html
+++ b/app/index.html
@@ -120,13 +120,14 @@
     </header>
     <div class="container"  style="margin:50px auto;display:table;">
       <div id="status" class="text-center"></div>
-      <div id="container" class="js-masonry">
-      </div>
+      <div id="album-container" class="js-masonry"></div>
+      <div id="photo-container" class="js-masonry"></div>
       <div id="pagination"></div>
     </div>
     <footer class="footer">
+
       <div class="container">
-        <p class="text-center">F8 Image Gallery &copy; Copyright 2015 | with <span class="glyphicon glyphicon-heart" style="color:red;"></span> from @Akinza</p>
+        <p class="text-center">F8 Image Gallery &copy; Copyright 2015</p>
       </div>
 
     </footer>
