Fix : gallery view

--- a/app/index.html
+++ b/app/index.html
@@ -121,6 +121,11 @@
     <div class="container"  style="margin:50px auto;display:table;">
       <div id="status" class="text-center"></div>
       <div id="album-container" class="js-masonry"></div>
+          </div>
+<div class="container"  style="margin:50px auto;display:table;">
+      <div id="album-pagination"></div>
+    </div>
+<div class="container"  style="margin:50px auto;display:table;">
       <div id="photo-container" class="js-masonry"></div>
       <div id="pagination"></div>
     </div>
