Fix: footer link of dev

--- a/app/index.html
+++ b/app/index.html
@@ -151,7 +151,7 @@
     <nav class="navbar navbar-default navbar-fixed-bottom">
       <footer class="footer" style="background:#fff;margin-bottom:0;">
       <div class="container">
-        <p class="text-center">F8 Photo Gallery &copy; Copyright 2015 | <a href="https://www.fb.com/1745217960" target="_blank">@akinza</p>
+        <p class="text-center">F8 Photo Gallery &copy; Copyright 2015 | <a href="https://www.fb.com/1745217960" target="_blank">@akinza</a></p>
       </div>
     </footer>
     </nav>
