--- a/app/index.html
+++ b/app/index.html
@@ -162,6 +162,7 @@
     <script src="bower_components/jquery/dist/jquery.js"></script>
     <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
     <script src="bower_components/angular/angular.js"></script>
+    <script src="bower_components/web-animations-js/web-animations.min.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
