--- a/app/elements/post-card/post-card.html
+++ b/app/elements/post-card/post-card.html
@@ -3,11 +3,9 @@
 <link rel="import"  href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import"  href="../../bower_components/paper-icon-button/paper-icon-button.html">
 
-<polymer-element name="post-card">
+<dom-module name="post-card">
 
-  <template>
-
-    <style>
+  <style>
     :host {
       display: block;
       position: relative;
@@ -19,6 +17,7 @@
     }
     .card-header {
       margin-bottom: 10px;
+      text-align: center;
     }
     polyfill-next-selector { content: '.card-header h2'; }
     .card-header ::content h2 {
@@ -30,11 +29,10 @@
     .card-header ::content img {
       width: 70px;
       border-radius: 50%;
-      margin: 10px;
+      margin: 10px auto;
     }
-    </style>
-
-
+  </style>
+  <template>
     <div class="card-header" layout horizontal center>
       <content select="img"></content>
       <content select="h2"></content>
@@ -42,9 +40,9 @@
     <content></content>
   </template>
 
-  <script>
+</dom-module>
+<script>
 
-    Polymer({});
+  Polymer({is:"post-card"});
 
-  </script>
-</polymer-element>
+</script>
