--- a/app/elements/post-card/post-card.html
+++ b/app/elements/post-card/post-card.html
@@ -31,11 +31,17 @@
       border-radius: 50%;
       margin: 10px auto;
     }
+    polyfill-next-selector { content: '.card-header p'; }
+    .card-header ::content p {
+      text-align: center;
+      margin: 10px auto;
+    }
   </style>
   <template>
     <div class="card-header" layout horizontal center>
       <content select="img"></content>
       <content select="h2"></content>
+      <content select="p"></content>
     </div>
     <content></content>
   </template>
