--- a/app/material.html
+++ b/app/material.html
@@ -1,79 +1,66 @@
 <!doctype html>
 <html>
-<head>
-  <title>Material :: Polymer</title>
+  <head>
+    <title>Material :: Polymer</title>
 
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
 
-  <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
+    <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
 
-  <!-- <link rel="import" href="bower_components/font-roboto/roboto.html"> -->
-  <link rel="import"  href="bower_components/paper-header-panel/paper-header-panel.html">
-  <link rel="import"  href="bower_components/paper-toolbar/paper-toolbar.html">
-  <link rel="import"  href="bower_components/paper-tabs/paper-tabs.html">
-  <link rel="import"  href="bower_components/iron-icon/iron-icon.html">
-  <link rel="import"  href="bower_components/iron-icons/iron-icons.html">
-  <link rel="import"  href="bower_components/paper-icon-button/paper-icon-button.html">
-  <link rel="import" href="elements/post-card/post-card.html">
-  <style>
-    html,body {
-      height: 100%;
-      margin: 0;
-      background-color: #E5E5E5;
-      font-family: 'RobotoDraft', sans-serif;
-    }
-    core-header-panel {
-      height: 100%;
-      overflow: auto;
-      -webkit-overflow-scrolling: touch;
-    }
-    core-toolbar {
-      background: #03a9f4;
-      color: white;
-    }
-    #tabs {
-      width: 100%;
-      margin: 0;
-      -webkit-user-select: none;
-      -moz-user-select: none;
-      -ms-user-select: none;
-      user-select: none;
-      text-transform: uppercase;
-    }
-    .container {
-       width: 80%;
-       margin: 50px auto;
-     }
-     @media (min-width: 481px) {
-       #tabs {
-         width: 200px;
-       }
-       .container {
-         width: 300px;
-       }
-     }
-  </style>
-</head>
-<body class="fullbleed layout vertical">
-  <paper-header-panel>
-    <paper-toolbar>
-      <paper-icon-button icon="menu" on-tap="menuAction"></paper-icon-button>
-      <div title>Title</div>
-      <paper-icon-button icon="more" on-tap="moreAction"></paper-icon-button>
-      <!-- <paper-tabs id="tabs" selected="all" self-end>
-       <paper-tab name="all">All</paper-tab>
-       <paper-tab name="favorites">Favorites</paper-tab>
-     </paper-tabs> -->
-    </paper-toolbar>
-    <!-- main page content will go here -->
-    <div class="container" layout vertical center>
+    <!-- <link rel="import" href="bower_components/font-roboto/roboto.html"> -->
+    <link rel="import"  href="bower_components/paper-header-panel/paper-header-panel.html">
+    <link rel="import"  href="bower_components/paper-header-panel/paper-drawer-panel.html">
+    <link rel="import"  href="bower_components/paper-toolbar/paper-toolbar.html">
+    <link rel="import"  href="bower_components/paper-tabs/paper-tabs.html">
+    <link rel="import"  href="bower_components/iron-icon/iron-icon.html">
+    <link rel="import"  href="bower_components/iron-icons/iron-icons.html">
+    <link rel="import"  href="bower_components/paper-icon-button/paper-icon-button.html">
+    <link rel="import"  href="bower_components/iron-selector/iron-selector.html">
+    <link rel="import"  href="bower_components/iron-media-query/iron-media-query.html">
+    <link rel="import" href="elements/post-card/post-card.html">
+    <style>
+      html,body {
+        height: 100%;
+        margin: 0;
+        background-color: #E5E5E5;
+        font-family: 'RobotoDraft', sans-serif;
+      }
+      paper-header-panel {
+        height: 100%;
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
+      }
+      paper-toolbar {
+        background: #03a9f4;
+        color: white;
+      }
+      post-card{
+        width: 400px;
+      }
+      #tabs {
+        width: 100%;
+        margin: 0;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        text-transform: uppercase;
+      }
+    </style>
+  </head>
+  <body class="fullbleed layout vertical">
+
+    <paper-header-panel>
+      <paper-toolbar>
+        <paper-icon-button icon="menu" on-tap="menuAction"></paper-icon-button>
+        <div title>Title</div>
+        <paper-icon-button icon="more" on-tap="moreAction"></paper-icon-button>
+      </paper-toolbar>
       <post-card>
         <img width="70" height="70" src="http://graph.facebook.com/1745217960/picture?height=70&width=70">
         <h2>Another Developer</h2>
         <p>I'm composing with shadow DOM!</p>
       </post-card>
-    </div>
-  </paper-header-panel>
-</body>
-
+    </paper-header-panel>
+  </body>
 </html>
