--- a/app/elements/post-card/post-card.html
+++ b/app/elements/post-card/post-card.html
@@ -39,9 +39,12 @@
   </style>
   <template>
     <div class="card-header" layout horizontal center>
-      <content select="img"></content>
+      <img src$="{{src}}">
+      <h2>{{heading}}</h2>
+      <p>{{description}}</p>
+      <!-- <content select="img"></content>
       <content select="h2"></content>
-      <content select="p"></content>
+      <content select="p"></content> -->
     </div>
     <content></content>
   </template>
@@ -49,6 +52,13 @@
 </dom-module>
 <script>
 
-  Polymer({is:"post-card"});
+  Polymer({
+    is:"post-card",
+    properties: {
+        src : String,
+        heading: String,
+        description: String
+    }
+  });
 
 </script>
