--- a/app/material.html
+++ b/app/material.html
@@ -9,7 +9,7 @@
 
     <!-- <link rel="import" href="bower_components/font-roboto/roboto.html"> -->
     <link rel="import"  href="bower_components/paper-header-panel/paper-header-panel.html">
-    <link rel="import"  href="bower_components/paper-header-panel/paper-drawer-panel.html">
+    <link rel="import"  href="bower_components/paper-drawer-panel/paper-drawer-panel.html">
     <link rel="import"  href="bower_components/paper-toolbar/paper-toolbar.html">
     <link rel="import"  href="bower_components/paper-tabs/paper-tabs.html">
     <link rel="import"  href="bower_components/iron-icon/iron-icon.html">
@@ -56,10 +56,13 @@
         <div title>Title</div>
         <paper-icon-button icon="more" on-tap="moreAction"></paper-icon-button>
       </paper-toolbar>
-      <post-card>
-        <img width="70" height="70" src="http://graph.facebook.com/1745217960/picture?height=70&width=70">
+      <post-card
+        src="http://graph.facebook.com/1745217960/picture?height=70&width=70"
+        heading="Another Developer"
+        description="I'm composing with shadow DOM!">
+        <!-- <img width="70" height="70" src="http://graph.facebook.com/1745217960/picture?height=70&width=70">
         <h2>Another Developer</h2>
-        <p>I'm composing with shadow DOM!</p>
+        <p>I'm composing with shadow DOM!</p> -->
       </post-card>
     </paper-header-panel>
   </body>
