--- a/app/index.html
+++ b/app/index.html
@@ -70,12 +70,12 @@
       </div>
     </div>
     <div class="row no-margin">
-      <section class="sidebar col-lg-2 col-md-3 col-sm-4 col-xs-4">
-        <div class="row  no-margin">
+      <section class="sidebar  col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <!-- <div class="row  no-margin">
           <div id="albumListHeading" class="list-group col-lg-12 col-md-12 col-sm-12 col-xs-12" style="margin:10px 0 5px 0; display: none;">
             <a class="list-group-item margin-left-20"><b>Albums</b></a>
           </div>
-        </div>
+        </div> -->
         <div class="row no-margin">
           <div id="album-container" class="list-group col-lg-12 col-md-12 col-sm-12 col-xs-12"></div>
         </div>
@@ -83,7 +83,9 @@
           <div id="album-pagination" class="col-lg-12 col-md-12 col-sm-12 col-xs-12"></div>
         </div>
       </section>
-      <section class="content col-lg-10 col-md-9 col-sm-8 col-xs-8">
+    </div>
+    <div class="row no-margin">
+      <section class="content col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="row no-margin">
           <div id="photo-container" class="js-masonry col-lg-12 col-md-12 col-sm-12 col-xs-12"></div>
         </div>
