--- a/app/material.html
+++ b/app/material.html
@@ -8,15 +8,22 @@
     <script src="bower_components/webcomponentsjs/webcomponents.js"></script>
 
     <!-- <link rel="import" href="bower_components/font-roboto/roboto.html"> -->
+    <link rel="import"  href="bower_components/paper-scroll-drawer-panel/paper-scroll-drawer-panel.html">
     <link rel="import"  href="bower_components/paper-header-panel/paper-header-panel.html">
-    <link rel="import"  href="bower_components/paper-header-panel/paper-drawer-panel.html">
+    <link rel="import"  href="bower_components/paper-drawer-panel/paper-drawer-panel.html">
     <link rel="import"  href="bower_components/paper-toolbar/paper-toolbar.html">
     <link rel="import"  href="bower_components/paper-tabs/paper-tabs.html">
+    <link rel="import"  href="bower_components/paper-item/paper-icon-item.html">
+    <link rel="import"  href="bower_components/paper-item/paper-item-body.html">
+    <link rel="import"  href="bower_components/paper-item/paper-item.html">
     <link rel="import"  href="bower_components/iron-icon/iron-icon.html">
     <link rel="import"  href="bower_components/iron-icons/iron-icons.html">
     <link rel="import"  href="bower_components/paper-icon-button/paper-icon-button.html">
     <link rel="import"  href="bower_components/iron-selector/iron-selector.html">
     <link rel="import"  href="bower_components/iron-media-query/iron-media-query.html">
+    <link rel="import"  href="bower_components/paper-checkbox/paper-checkbox.html">
+    <link rel="import"  href="bower_components/paper-material/paper-material.html">
+    <link rel="import"  href="bower_components/paper-progress/paper-progress.html">
     <link rel="import" href="elements/post-card/post-card.html">
     <style>
       html,body {
@@ -46,21 +53,52 @@
         user-select: none;
         text-transform: uppercase;
       }
+      .warning{
+        color:orange;
+      }
     </style>
   </head>
   <body class="fullbleed layout vertical">
+    <paper-drawer-panel>
+      <paper-scroll-drawer-panel drawer>
+        <!-- <paper-checkbox>label</paper-checkbox>
+        <paper-checkbox checked> label</paper-checkbox> -->
+        <!-- <paper-item>
+          <paper-item-body>
+            <div><paper-checkbox checked>lorem ipsum</paper-checkbox></div>
+          </paper-item-body>
+          <iron-icon icon="warning" class="warning"></iron-icon>
+        </paper-item>
+        <paper-item>
+          <paper-item-body>
+            <div><paper-checkbox checked>lorem ipsum</paper-checkbox></div>
+          </paper-item-body>
+          <iron-icon icon="warning" class="warning"></iron-icon>
+        </paper-item> -->
+        <paper-item role="menuitemcheckbox">
+          <paper-item-body>
+            Show your status
+          </paper-item-body>
+          <paper-checkbox></paper-checkbox>
+        </paper-item>
 
-    <paper-header-panel>
-      <paper-toolbar>
-        <paper-icon-button icon="menu" on-tap="menuAction"></paper-icon-button>
-        <div title>Title</div>
-        <paper-icon-button icon="more" on-tap="moreAction"></paper-icon-button>
-      </paper-toolbar>
-      <post-card>
-        <img width="70" height="70" src="http://graph.facebook.com/1745217960/picture?height=70&width=70">
-        <h2>Another Developer</h2>
-        <p>I'm composing with shadow DOM!</p>
-      </post-card>
-    </paper-header-panel>
+      </paper-scroll-drawer-panel>
+
+      <paper-scroll-drawer-panel main>
+        <paper-toolbar>
+          <paper-icon-button icon="menu" on-tap="menuAction"></paper-icon-button>
+          <div title>Title</div>
+          <paper-icon-button icon="more" on-tap="moreAction"></paper-icon-button>
+        </paper-toolbar>
+        <!-- <paper-material elevation="1"> -->
+          <post-card>
+            <img width="70" height="70" src="http://graph.facebook.com/1745217960/picture?height=70&width=70">
+            <h2>Akinza!</h2>
+            <p>I'm composing with shadow DOM!</p>
+            <paper-progress value="10"></paper-progress>
+          </post-card>
+        <!-- </paper-material> -->
+      </paper-scroll-drawer-panel>
+    </paper-drawer-panel>
   </body>
 </html>
