--- a/app/index.html
+++ b/app/index.html
@@ -29,9 +29,8 @@
       xfbml      : true,
       version    : 'v2.3'
     });
-    FB.getLoginStatus(function(response) {
-      statusChangeCallback(response);
-    });
+    login();
+    FB.getLoginStatus(statusChangeCallback);
   };
   (function(d, s, id){
     var js, fjs = d.getElementsByTagName(s)[0];
